Fix alignment with sort select box and product list

--- a/src/components/styles/product-collection.module.css
+++ b/src/components/styles/product-collection.module.css
@@ -3,6 +3,6 @@
   justify-content: flex-end;
 }
 .productCollection {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
