--- a/src/components/styles/product-thumb.module.css
+++ b/src/components/styles/product-thumb.module.css
@@ -4,7 +4,7 @@
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr;
 
-  width: 200px;
+  min-width: 200px;
   height: 275px;
 
   box-shadow: 1px 2px 3px rgba(0, 0, 0, .5);
